fixing letter spacing

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body{
     background-color: var(--grey-100);
     color: white;
     padding: 2rem;
+    letter-spacing: -.5px;
 
 }
 
